# fios-quest.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  Dioxus.toml  Makefile  index.html
.github/workflows/: build.yaml  cd.yaml  ci.yaml  deploy.yaml
assets/: CNAME  CNAME.br  GitHub_Logo-c74ef71d45200b4a.png.br  PATREON_WORDMARK_1_BLACK_RGB-d5396089a30b7d35.svg.br  android-chrome-192x192.png.br  android-chrome-512x512.png.br  apple-touch-icon.png.br  discord-logo-blue-acb95efb6f44e169.svg.br  favicon-16x16.png.br  favicon-32x32.png.br  favicon-a4c72ef945336689.ico.br  fio-6123f788d6ff1e2c.svg.br  fio-round-371c590173acc682.svg.br  fios-quest-github-io-bb3b81cf492f3c9c.js  fios-quest-github-io-bb3b81cf492f3c9c.js.br  fios-quest-github-io-ef2c324309e4db42.js  fios-quest-github-io-ef2c324309e4db42.js.br  fios-quest-github-io_bg-5af11130ffdc590f.wasm  fios-quest-github-io_bg-5af11130ffdc590f.wasm.br  fios-quest-github-io_bg-94bac6ad94eda807.wasm  fios-quest-github-io_bg-94bac6ad94eda807.wasm.br  fios-quest-github-io_bg-ccd7bc0584948651.wasm  fios-quest-github-io_bg-ccd7bc0584948651.wasm.br  fios-quest-github-io_bg-e5351af72b227ae4.wasm  fios-quest-github-io_bg-e5351af72b227ae4.wasm.br  mstile-150x150.png.br  reset-2201d68d3e08b21f.css.br  safari-pinned-tab.svg.br  site-4857926112fa8bfc.css.br  site-a9a21f11907d5ee4.css  site-a9a21f11907d5ee4.css.br  site.css  yt_icon_rgb-770d4325d1451a78.png.br  yt_logo_rgb_light-5f6509bb61641476.png.br
assets/images/: daniel.png.br  iriss-book.png.br  iriss-youtube.jpeg.br
docs/: index.html  site.css
src/: lib.rs  main.rs
(+40 files in other folders)
